# Bevy-ShipsGame

./: .gitignore  Cargo.toml  LICENSE  README.md  project.godot  run_godot.rs  rust.gdextension  rust.gdextension.uid
.github/workflows/: rust.yml
addons/: debug_script.gd  debug_script.gd.uid
addons/godot-bevy/: README.md  plugin.gd
godot/: icon.svg.import  project.godot  rust.gdextension  rust.gdextension.uid
godot/assets/materials/ships/: basic_ship_hull.material
godot/assets/materials/world/: basic_water.material
godot/scenes/maps/: DevMap.scn
godot/templates/: BevyAppSingleton.tscn  DebuggerDrawer.tscn
godot/templates/entities/ships/: DevBoatEntity.tscn
rust/core/: lib.rs
rust/core/components/: maker_components.rs  mod.rs
rust/core/components/stats/: health_stats.rs  speed_stats.rs
rust/core/gameplay/: boats_gameplay.rs  gameplay_boats.rs  mod.rs
rust/core/messages/: mod.rs
rust/core/networking/: mod.rs
rust/core/networking/client/: mod.rs
rust/core/networking/common/: mod.rs
rust/core/networking/protocol/: mod.rs
rust/core/networking/server/: mod.rs
rust/core/resources/: input_resources.rs  mod.rs
rust/core/systems/: boat_systems.rs  debug_systems.rs  input_systems.rs  mod.rs
rust/core/systems/managers/: mod.rs
scenes/maps/: DevMap.scn
src/: components.rs  entities.rs  lib.rs  resources.rs  systems.rs
src/components/: maker_components.rs  marker_components.rs  mod.rs  networking.rs  stats.rs  stats_components.rs
src/components/networking/: mod.rs  netid_component.rs
src/components/stats/: health.rs  mod.rs  speed.rs
src/entities/: boat.rs  boat_entity.rs  mod.rs
src/gameplay/: boat.rs  gameplay_boats.rs  mod.rs
src/networking/: mod.rs
src/networking/client/: mod.rs
src/networking/common/: mod.rs
src/networking/protocol/: mod.rs
src/networking/protocol/channels/: common_channels.rs  mod.rs
src/networking/protocol/messages/: common.rs  mod.rs
src/networking/server/: mod.rs
src/resources/: input_resources.rs  inputs.rs  mod.rs
src/systems/: boat_systems.rs  boats.rs  debug_systems.rs  debuger.rs  debugging.rs  input_systems.rs  inputs.rs  mod.rs
templates/: DebuggerDrawer.tscn
templates/entities/ships/: DevBoatEntity.tscn
(+6 files in other folders)
