[package]
name = "rust_ships"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot-bevy = "0.8.4"  # Latest with opt-in plugin system
bevy = { version = "0.16", default-features = false }
godot = "0.3"
which = "8.0.0"
bevy_asset_loader = "0.23.0"

[[bin]]
path = "./run_godot.rs"
name = "godot"

[workspace]
# Empty workspace table to make this a standalone project
