[package]
name = "rust_ships"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot-bevy = "0.8.4"  # Latest with opt-in plugin system
bevy = { version = "0.16", default-features = false }
godot = "0.3"
which = "8.0.0"
bevy_asset_loader = "0.23.0"
bevy_quinnet = { version = "0.18.1", features = ["bincode-messages"] }
strum = "0.27.2"
strum_macros = "0.27.2"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.8.5"

[[bin]]
path = "./run_godot.rs"
name = "godot"

[workspace]
# Empty workspace table to make this a standalone project
